2021-11-16  Till Kamppeter <till.kamppeter@gmail.com>

	db/source/driver/pentaxpj.xml,
	db/source/driver/ppmtomd.xml,
	db/source/driver/slap.xml: Updated links to upstream source code.

2021-10-21  Till Kamppeter <till.kamppeter@gmail.com>

	db/source/driver/brlaser.xml,
	db/source/driver/c2esp.xml,
	db/source/driver/foo2hbpl2.xml,
	db/source/driver/foo2hiperc-z1.xml,
	db/source/driver/foo2hiperc.xml,
	db/source/driver/foo2hp.xml,
	db/source/driver/foo2lava.xml,
	db/source/driver/foo2oak-z1.xml,
	db/source/driver/foo2oak.xml,
	db/source/driver/foo2qpdl.xml,
	db/source/driver/foo2slx.xml,
	db/source/driver/foo2xqx.xml,
	db/source/driver/foo2zjs-z1.xml,
	db/source/driver/foo2zjs-z2.xml,
	db/source/driver/foo2zjs-z3.xml,
	db/source/driver/foo2zjs.xml,
	db/source/driver/m2300w.xml,
	db/source/driver/ptouch.xml,
	db/source/driver/pxljr.xml,
	db/source/driver/rastertosag-gdi.xml,
	db/source/driver/splix.xml: Added Snap Store link to
	Ghostscript Printer Application as these drivers are now also
	available in this Printer Application.

2021-10-05  Till Kamppeter <till.kamppeter@gmail.com>

	db/source/driver/Postscript-Brother.xml,
	db/source/driver/Postscript-Canon.xml,
	db/source/driver/Postscript-Epson.xml,
	db/source/driver/Postscript-Gestetner.xml,
	db/source/driver/Postscript-HP.xml,
	db/source/driver/Postscript-InfoPrint.xml,
	db/source/driver/Postscript-Infotec.xml,
	db/source/driver/Postscript-KONICA_MINOLTA.xml,
	db/source/driver/Postscript-Kyocera.xml,
	db/source/driver/Postscript-Lanier.xml,
	db/source/driver/Postscript-Lexmark.xml,
	db/source/driver/Postscript-NRG.xml,
	db/source/driver/Postscript-Oce.xml,
	db/source/driver/Postscript-Oki.xml,
	db/source/driver/Postscript-Ricoh.xml,
	db/source/driver/Postscript-Samsung.xml,
	db/source/driver/Postscript-Savin.xml,
	db/source/driver/Postscript-Sharp.xml,
	db/source/driver/Postscript-Toshiba.xml,
	db/source/driver/PostscriptMono-Ricoh.xml,
	db/source/driver/PostscriptColor-Ricoh.xml,