@@ -4,6 +4,8 @@
 	db/source/driver/ppmtomd.xml,
 	db/source/driver/slap.xml: Updated links to upstream source code.
 
+	db/source/printer/Brother-HL-2130.xml: Added Brother HL-2130.
+
 2021-10-21  Till Kamppeter <till.kamppeter@gmail.com>
 
 	db/source/driver/brlaser.xml,
